correction image multer

--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -49,7 +49,7 @@
             <li><a class="carrito" href="/products/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
         <div class="search">
-            <form><input type="text" placeholder="Buscar productos,ofertas.."><button class="lupa"><i
+            <form action="/products/search"><input name="search" type="text" placeholder="Buscar productos,ofertas.."><button class="lupa" type="submit"><i
                         class="fas fa-search"></button></i></form>
         </div>
     </nav>
