--- a/sitio/views/addProducts.ejs
+++ b/sitio/views/addProducts.ejs
@@ -5,24 +5,23 @@
     <body class="addProducts">
         <%- include('./partials/header.ejs') %>
     
-
                     <form action="/admin/addProducts" method="POST" enctype="multipart/form-data">
                         <div class="formulario">
                             <div class="boxForm">
                                 <label for="titulo" class="">Título :</label>
-                                <input class="input-title" type="text" name="title" id="titulo" />
+                                <input class="input-title" type="text" name="title" id="titulo" required />
 
                             </div>
 
                             <div class="boxForm">
                                 <label for="descripcion" class="">Descripción:</label>
-                                <input class="input-form" type="text" name="description" id="descripcion" />
+                                <input class="input-form" type="text" name="description" id="descripcion" required />
 
                             </div>
 
                             <div class="boxForm">
                                 <label for="category">Categorías:</label>
-                                <select name="category" id="category" value="Categorias">
+                                <select name="category" id="category" value="Categorias" required>
                                     <option value="category"></option>
                                     <option value="category">Mates</option>
                                     <option value="category">Yerbas</option>
@@ -34,8 +33,8 @@
 
 
                             <div class="boxForm">
-                                <label for="valor" class="">Precio :</label>
-                                <input class="input-price" type="text" name="price" />
+                                <label for="valor" class="">Precio : </label>
+                                <input class="input-price" type="text" name="price" required />
 
                             </div>
 
