--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -45,7 +45,7 @@
         <!--  Productos   -->
 
         <section class="productos">
-          <% productos.forEach(producto=> { %>
+          <% products.forEach(producto=> { %>
 
             <article class="producto">
               <div class="imagen">
