Categories, releer json

--- a/sitio/views/addProducts.ejs
+++ b/sitio/views/addProducts.ejs
@@ -9,19 +9,19 @@
                         <div class="formulario">
                             <div class="boxForm">
                                 <label for="titulo" class="">Título :</label>
-                                <input class="input-title" type="text" name="title" id="titulo" required />
+                                <input class="input-title" type="text" name="title" id="titulo" >
 
                             </div>
 
                             <div class="boxForm">
                                 <label for="descripcion" class="">Descripción:</label>
-                                <input class="input-form" type="text" name="description" id="descripcion" required />
+                                <input class="input-form" type="text" name="description" id="descripcion" >
 
                             </div>
 
                             <div class="boxForm">
                                 <label for="category">Categorías:</label>
-                                <select name="category" id="category" value="Categorias" required>
+                                <select name="category" id="category" value="Categorias">
                                     <option value="category"></option>
                                     <option value="category">Mates</option>
                                     <option value="category">Yerbas</option>
@@ -34,13 +34,13 @@
 
                             <div class="boxForm">
                                 <label for="valor" class="">Precio : </label>
-                                <input class="input-price" type="text" name="price" required />
+                                <input class="input-price" type="text" name="price" >
 
                             </div>
 
                             <div class="boxForm">
                                 <label class="">Cargar foto :</label>
-                                <input class="input-form" type="file" name="image" multiple />
+                                <input class="input-form" type="file" name="image" accept="image/*">
                             </div>
                             <div class="boxForm">
                                 <button type="submit" class="btn btn-dark">Guardar</button>
