--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -69,8 +69,8 @@
             <p>Dejanos tu email y te enviamos un cupón de 10%OFF para que lo uses en tu primer compra!!</p>
           </div>
           <div class="form">
-            <input type="text" name="FNAME" placeholder="Nombre" required="">
-            <input type="email" name="EMAIL" placeholder="Email" required="" autocomplete="off">
+            <input type="text" name="FNAME" placeholder="Nombre" >
+            <input type="email" name="EMAIL" placeholder="Email" autocomplete="off">
             <input type="submit" value="Subscribirse">
           </div>
         </div>
