--- a/sitio/views/partials/footer.ejs
+++ b/sitio/views/partials/footer.ejs
@@ -49,13 +49,13 @@
                         Categorías
                     </h6>
                     <p>
-                        <a href="#!" class="text-reset">Mates</a>
+                        <a href="/products/categories?category=mates" class="text-reset">Mates</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">Termos</a>
+                        <a href="/products/categories?category=bolsos" class="text-reset">Bolsos</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">Artículos personalizados</a>
+                        <a href="#!" class="text-reset"></a>
                     </p>
                     <p>
                         <a href="#!" class="text-reset">Otros</a>
