--- a/sitio/views/registro.ejs
+++ b/sitio/views/registro.ejs
@@ -11,40 +11,40 @@
                         <label for="nombre">
                             <p class="pformulario2">Nombre y apellido:</p>
                         </label>
-                        <div class="inputs"><input type="text" class="primera-barra" name="nombre" required>
+                        <div class="inputs"><input type="text" class="primera-barra" name="nombre" >
                         </div>
 
                         <label for="usuario">
                             <p class="pformulario2"> Nombre de ID:</p>
                         </label>
-                        <div class="inputs"><input type="text" class="primera-barra" name="usuario" required>
+                        <div class="inputs"><input type="text" class="primera-barra" name="usuario">
                         </div>
 
 
                         <label for="clave">
                             <p class="pformulario2">Contraseña:</p>
                         </label>
-                        <div class="inputs"><input type="password" class="primera-barra" name="clave" required>
+                        <div class="inputs"><input type="password" class="primera-barra" name="clave" >
                         </div>
 
 
                         <label for="clave">
                             <p class="pformulario2">Confirmar:</p>
                         </label>
-                        <div class="inputs"> <input type="password" class="primera-barra" name="clave" required>
+                        <div class="inputs"> <input type="password" class="primera-barra" name="clave" >
                         </div>
 
 
                         <label for="email">
                             <p class="pformulario2"> Email:</p>
                         </label>
-                        <div class="inputs"><input type="email" class="primera-barra" name="email" required>
+                        <div class="inputs"><input type="email" class="primera-barra" name="email" >
                         </div>
 
                         <label for="fecha">
                             <p class="pformulario2"> Fecha de nacimiento:</p>
                         </label>
-                        <div class="inputs"><input type="date" class="primera-barra" name="fecha" required>
+                        <div class="inputs"><input type="date" class="primera-barra" name="fecha" >
                         </div>
 
                         <div class="reg-bor">
