--- a/sitio/views/registro.ejs
+++ b/sitio/views/registro.ejs
@@ -15,13 +15,13 @@
                                 type="text" 
                                 class="form-control"
                                 id="nombre"
-                                name="nombre"
-                                value="<%= locals.oldData ? oldData.nombre : null %>"
+                                name="nombreCompleto"
+                                value="<%= locals.oldData ? oldData.nombreCompleto : null %>"
                                 >
 
-                                <% if (locals.errors && errors.nombre) { %> 
+                                <% if (locals.errors && errors.nombreCompleto) { %> 
                                       <div class="text-danger">
-                                       <%= errors.nombre.msg %> 
+                                       <%= errors.nombreCompleto.msg %> 
                                       </div>
                                     <%  } %> 
                               </div>
@@ -47,13 +47,13 @@
                                  type="password"
                                  class="form-control"
                                  id="exampleInputPassword1"
-                                 name="password"
-                                 value="<%= locals.oldData ? oldData.password : null %>"
+                                 name="contrasenia"
+                                 value="<%= locals.oldData ? oldData.contrasenia : null %>"
                                 >
 
-                                <% if (locals.errors && errors.password) { %> 
+                                <% if (locals.errors && errors.contrasenia) { %> 
                                     <div class="text-danger">
-                                     <%= errors.password.msg %> 
+                                     <%= errors.contrasenia.msg %> 
                                     </div>
                                   <%  } %> 
                               </div>
@@ -78,12 +78,12 @@
                                  type="date" 
                                  class="form-control"
                                  id="fecha" 
-                                 name="fecha"
-                                 value="<%= locals.oldData ? oldData.fecha : null %>"
+                                 name="fechaNacimiento"
+                                 value="<%= locals.oldData ? oldData.fechaNacimiento : null %>"
                                  >
-                                <% if (locals.errors && errors.fecha) { %> 
+                                <% if (locals.errors && errors.fechaNacimiento) { %> 
                                     <div class="text-danger">
-                                     <%= errors.fecha.msg %> 
+                                     <%= errors.fechaNacimiento.msg %> 
                                     </div>
                                   <%  } %> 
                               </div>
