--- a/sitio/views/login.ejs
+++ b/sitio/views/login.ejs
@@ -26,24 +26,25 @@
 
                 <!-- form bootstrap-->
                 <section class="box-2">
-                    <form class="form" >
+                    <form class="form" action="" method="POST">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Email</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
+                                aria-describedby="emailHelp" name="email">
                             <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie
 
                             </div>
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
+                            <input type="password" class="form-control" id="exampleInputPassword1" name="contrasenia">
                         </div>
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1" name="recordar">
                             <label class="form-check-label" for="exampleCheck1">Recordarme</label>
                         </div>
                         <button type="submit" class="btn btn-primary">Ingresar</button>
+                           <span class="text-danger"><%= locals.errores && errores.email ? errores.email.msg : null%> </span>
                     </form>
                 </section>
             </main>
