--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -1,61 +1,66 @@
 <header>
-    <nav class="nav">
-        <ul class="navbar_responsive">
-            <li><a href="">tienda</a></li>
-            <li><a href="">contacto</a></li>
-            <li><a href="">nosotros</a></li>
-            <div class="dropdown">
+  <nav class="nav">
+      <ul class="navbar_responsive">
+          <li><a href="">tienda</a></li>
+          <li><a href="">contacto</a></li>
+          <li><a href="">nosotros</a></li>
+          
+      </ul>
+      <div class="burger">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/login">login</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">registro</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">tienda</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">contacto</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">nosotros</a>
+                    </li>
+                  </ul>
+                  
+                </div>
+              </div>
+            </nav>
+      </div>
+      <div class="logo"><a href="/"><img src="/images/logo-h.png" alt="logo"></a></div>
+      <ul class="login-bar">
+        <% if (locals.userLogin) { %>
+          <% if (locals.userLogin.rol === "admin") { %>
+            <li class="dropdown">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 ADMIN
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="/admin/addProducts">Agregar Producto</a></li>
               </ul>
-            </div>
-        </ul>
-        <div class="burger">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container-fluid">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/login">login</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">registro</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">tienda</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">contacto</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">nosotros</a>
-                      </li>
-                    </ul>
-                    
-                  </div>
-                </div>
-              </nav>
-        </div>
-        <div class="logo"><a href="/"><img src="/images/logo-h.png" alt="logo"></a></div>
-        <ul class="login-bar">
-          <% if (locals.userLogin) { %>
-            <li><a class="logoIn" href="/users/logout">Cerrar sesión<i class="fas fa-user"></i></a></li>
-            <li><a class="logoIn" href="/users/profile"><%= locals.userLogin.nombreId %><i class="fas fa-user"></i></a></li>
-            <% }else{ %>
-            <li><a class="logoIn" href="/users/login">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
-            <li><a class="logoIn" href="/users/registro">Creá tu cuenta<i class="fas fa-user"></i></a></li>
-            <li><a class="carrito" href="/products/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
-            <% } %>
-        </ul>
-        <div class="search">
-            <form action="/products/search"><input name="search" type="text" placeholder="Buscar productos,ofertas.."><button class="lupa" type="submit"><i
-                        class="fas fa-search"></button></i></form>
-        </div>
-    </nav>
+            </li>
+           
+          <% } %>
+       
+          <li><a class="logoIn" href="/users/logout">Cerrar sesión<i class="fas fa-user"></i></a></li>
+          <li><a class="logoIn" href="/users/profile"><%= locals.userLogin.nombreId %><i class="fas fa-user"></i></a></li>
+          <% }else{ %>
+          <li><a class="logoIn" href="/users/login">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+          <li><a class="logoIn" href="/users/registro">Creá tu cuenta<i class="fas fa-user"></i></a></li>
+          <li><a class="carrito" href="/products/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
+          <% } %>
+      </ul>
+      <div class="search">
+          <form action="/products/search"><input name="search" type="text" placeholder="Buscar productos,ofertas.."><button class="lupa" type="submit"><i
+                      class="fas fa-search"></button></i></form>
+      </div>
+  </nav>
 </header>
