add create and read

--- a/sitio/views/addProducts.ejs
+++ b/sitio/views/addProducts.ejs
@@ -22,12 +22,12 @@
                             <div class="boxForm">
                                 <label for="category">Categorías:</label>
                                 <select name="category" id="category" value="Categorias">
-                                    <option value="category"></option>
-                                    <option value="category">Mates</option>
-                                    <option value="category">Yerbas</option>
-                                    <option value="category">Bolsos Materos</option>
-                                    <option value="category">Bombillas</option>
-                                    <option value="category">Otros</option>
+                                    <option value=0></option>
+                                    <option value=1>Mates</option>
+                                    <option value=2>Yerbas</option>
+                                    <option value=3>Bolsos Materos</option>
+                                    <option value=4>Bombillas</option>
+                                    <option value=5>Otros</option>
                                 </select>
                             </div>
 
