--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -51,7 +51,7 @@
           <% } %>
        
           <li><a class="logoIn" href="/users/logout">Cerrar sesión<i class="fas fa-user"></i></a></li>
-          <li><a class="logoIn" href="/users/profile"><%= locals.userLogin.nombreId %><i class="fas fa-user"></i></a></li>
+          <li><a class="logoIn" href="/users/profile">Mi perfil<i class="fas fa-user"></i></a></li>
           <% }else{ %>
           <li><a class="logoIn" href="/users/login">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
           <li><a class="logoIn" href="/users/registro">Creá tu cuenta<i class="fas fa-user"></i></a></li>
