--- a/sitio/public/stylesheets/profile.css
+++ b/sitio/public/stylesheets/profile.css
@@ -19,3 +19,18 @@
     margin-left: 155px;
     
 }
+
+.profile label{
+    color: white;
+    margin: auto;
+}
+
+.profile .mb-3 {
+    margin-bottom: 1rem!important;
+    width: 300px;
+    margin-left: 40px;
+}
+
+.profile button{
+    margin-left: 40px;
+}
