add crud complete

--- a/sitio/views/login.ejs
+++ b/sitio/views/login.ejs
@@ -37,7 +37,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" name="contrasenia">
+                            <input type="password" class="form-control" id="exampleInputPassword1" name="password">
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1" name="recordar">
