--- a/sitio/public/stylesheets/general.css
+++ b/sitio/public/stylesheets/general.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jomhuria&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pacifico&display=swap&family=Rock+Salt&display=swap');
+
 *{
     box-sizing: border-box;
     padding: 0;
