add styles profileCss

--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -21,7 +21,7 @@
                       <a class="nav-link active" aria-current="page" href="#">registro</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/productList">tienda</a>
+                      <a class="nav-link active" aria-current="page" href="/">tienda</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="#">contacto</a>
