--- a/sitio/views/profile.ejs
+++ b/sitio/views/profile.ejs
@@ -32,7 +32,7 @@
               value="<%= user.nameId %>">
             </div>
            
-            <button type="submit" class="btn btn-primary">Guardar</button>
+            <button type="submit" class="button">Guardar</button>
           </form>
 
                     <%- include('./partials/footer.ejs') %>
