--- a/sitio/public/stylesheets/profile.css
+++ b/sitio/public/stylesheets/profile.css
@@ -49,15 +49,27 @@
 
 }
 
-.profile .btn-primary {
+.profile .button {
     color:rgb(2, 2, 2);
     background: linear-gradient( #603813 0%, #b29f94  51%, #603813  100%);
     border-color: #000000;
     width: 280px;
+    height: 50px;
     margin-bottom: 100px;
-    font-family:'Rock Salt';
-    font-weight: bold;
+    margin-top: 50px;
+    font-family:'Abril Fatface';
+    font-weight: 10px;
+    font-size: 25px;
 }
+.profile .button:hover {
+    box-shadow: inset 0 0 20px rgba(255, 0, 0, 0.5), 0 0 20px rgba(255, 255, 255, 0.9);
+    outline-color: rgba(49, 138, 172, 0);
+    outline-offset: 80px;
+    text-shadow: 1px 12px 6px #fff;
+ 
+  }
+  
+
 
 .profile label {
     color:rgb(2, 2, 2);
@@ -66,17 +78,4 @@
 
 
 
-.btn-grad {background-image: linear-gradient(to right, #603813 0%, #b29f94  51%, #603813  100%)}
-.btn-grad {
 
-   text-align: center;
-   text-transform: uppercase;
-   transition: 0.5s;
-   background-size: 200% auto;
-   color: white;            
-   box-shadow: 0 0 20px #eee;
-   border-radius: 10px;
-   display: block;
- }
-
- 
