add view => productos.ejs

--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
   <nav class="nav">
       <ul class="navbar_responsive">
-          <li><a href="">tienda</a></li>
+          <li><a href="/products/productos">tienda</a></li>
           <li><a href="">contacto</a></li>
           <li><a href="">nosotros</a></li>
           
