--- a/sitio/views/partials/footer.ejs
+++ b/sitio/views/partials/footer.ejs
@@ -68,7 +68,7 @@
                         Información
                     </h6>
                     <p>
-                        <a href="#!" class="text-reset">Tienda</a>
+                        <a href="/products/productos" class="text-reset">Tienda</a>
                     </p>
                     <p>
                         <a href="#!" class="text-reset">Nosotros</a>
