--- a/sitio/views/detalleDeProducto.ejs
+++ b/sitio/views/detalleDeProducto.ejs
@@ -23,10 +23,14 @@
                 </div>
                 <section class="box">
                     <div class= "button-delete-edit">
+                        <% if (locals.userLogin) { %>
+                            <% if (locals.userLogin.rols_id === 2) { %>
                     <button class="btn btn-dark"><a href="/admin/editProducts/<%= producto.id %> ">Editar</a></button>
                     <form action="/admin/delete/<%= producto.id %>?_method=DELETE " method="POST">
                     <button type="submit" class="btn btn-dark">Eliminar</button>
                     </form>
+                    <% } %>
+                    <% } %>
                    </div>
                     <span class="sub-box">Añadir al carrito</span>
                     <h5>Envío Gratis a Todo el País</h5>
