--- a/sitio/public/stylesheets/list.css
+++ b/sitio/public/stylesheets/list.css
@@ -1,9 +1,10 @@
+body {
+    background:whitesmoke
+}
 .list .menu {
     display: block;
     margin: auto;
 }
-
-
 
 .list .menu h1{
     text-align: center;
