--- a/sitio/public/stylesheets/profile.css
+++ b/sitio/public/stylesheets/profile.css
@@ -3,7 +3,7 @@
      background-repeat: no-repeat;
     align-items: center;
     text-align: center;
-    background-size: 1300px 1000px;
+    background-size: 100%;
   
     
     
