--- a/sitio/views/list.ejs
+++ b/sitio/views/list.ejs
@@ -8,11 +8,23 @@
             <main class="menu">
               <h1>Listado de productos</h1>
               <ul>
-                  <% for ( let i = 0; i < productos.length; i++) { %>  
-                        <li>
-                            <%=productos[i].title %> 
-                        </li>
-                    <% } %>  
+                <% productos.forEach(producto=> { %>
+
+                    <article class="producto">
+                      <div class="imagen">
+                        <a href="/admin/editProducts/<%= producto.id %> "><img class="rounded-circle" src="/images/<%= producto.image %> "
+                            width="200px"> </a>
+                      </div>
+                      <div class="resumen">
+                        <h4 class="descripcion">
+                          <%= producto.title %>
+                        </h4>
+                        <p class="precio">$<%= producto.price %>
+                        </p>
+                      </div>
+                    </article>
+        
+                    <% }) %>
               </ul>
             </main>
             <%- include('./partials/footer.ejs') %>
