--- a/sitio/views/productos.ejs
+++ b/sitio/views/productos.ejs
@@ -53,6 +53,27 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
+
+
+              <section class="productos">
+                <% productos.forEach(producto=> { %>
+      
+                  <article class="producto">
+                    <div class="imagen">
+                      <a href="/products/detalleDeProducto/<%= producto.id %> "><img class="rounded-circle" src="/images/<%= producto.image %> "
+                          width="200px"> </a>
+                    </div>
+                    <div class="resumen">
+                      <h4 class="descripcion">
+                        <%= producto.title %>
+                      </h4>
+                      <p class="precio">$<%= producto.price %>
+                      </p>
+                    </div>
+                  </article>
+      
+                  <% }) %>
+              </section>
             </main>
             <%- include('./partials/footer.ejs') %>
 
