--- a/sitio/views/partials/footer.ejs
+++ b/sitio/views/partials/footer.ejs
@@ -34,7 +34,7 @@
 
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 
-                    <h6 class="text-uppercase fw-bold mb-4">
+                    <h6 class="texto-degradado">
                         <i class="fas fa-gem me-3"></i>Hora De Mates
                     </h6>
                     <p>
