--- a/sitio/views/productos.ejs
+++ b/sitio/views/productos.ejs
@@ -7,7 +7,7 @@
         <%- include('./partials/header.ejs') %>
             <main class="menu">
 
-              <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+              <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" >
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -18,22 +18,22 @@
                   <div class="carousel-item active">
                     <img src="/images/banner-producto1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>Some representative placeholder content for the first slide.</p>
+                      <h5>""  </h5>
+                      <p>.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="/images/banner-producto2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Second slide label</h5>
-                      <p>Some representative placeholder content for the second slide.</p>
+                      <h5>  </h5>
+                      <p>.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/images/banner-product3.jpg" class="d-block w-100" alt="...">
+                    <img src="/images/banner5.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p>
+                      <h5>  </h5>
+                      <p>S</p>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -54,18 +54,19 @@
                 </button>
               </div>
 
-
+              <h1 class="texto-degradado">Nuestros Productos</h1>
               <section class="productos">
                 <% productos.forEach(producto=> { %>
       
                   <article class="producto">
                     <div class="imagen">
-                      <a href="/products/detalleDeProducto/<%= producto.id %> "><img class="rounded-circle" src="/images/<%= producto.image %> "
+                      <a href="/products/detalleDeProducto/<%= producto.id %> "><img class="rounded" src="/images/<%= producto.image %> "
                           width="200px"> </a>
                     </div>
                     <div class="resumen">
                       <h4 class="descripcion">
                         <%= producto.title %>
+                      
                       </h4>
                       <p class="precio">$<%= producto.price %>
                       </p>
