add view contact

--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -2,7 +2,7 @@
   <nav class="nav">
       <ul class="navbar_responsive">
           <li><a href="/products/productos">tienda</a></li>
-          <li><a href="">contacto</a></li>
+          <li><a href="/contacto">contacto</a></li>
           <li><a href="">nosotros</a></li>
           
       </ul>
