add corrections header

--- a/sitio/views/partials/footer.ejs
+++ b/sitio/views/partials/footer.ejs
@@ -71,10 +71,10 @@
                         <a href="/products/productos" class="text-reset">Tienda</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">Nosotros</a>
+                        <a href="/contacto" class="text-reset">Contacto</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">Acerca de</a>
+                        <a href="/nosotros" class="text-reset">Sobre nosotros</a>
                     </p>
                     <p>
                         <a href="#!" class="text-reset">Ayuda</a>
