--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -3,7 +3,7 @@
       <ul class="navbar_responsive">
           <li><a href="/products/productos">tienda</a></li>
           <li><a href="/contacto">contacto</a></li>
-          <li><a href="">nosotros</a></li>
+          <li><a href="">sobre nosotros</a></li>
           
       </ul>
       <div class="burger">
