--- a/sitio/public/stylesheets/contacto.css
+++ b/sitio/public/stylesheets/contacto.css
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
    align-items: center;
    text-align: center;
-   background-size: 100%;
+   background-size: 100% 100%;
 }
 
 .contacto .form-contact{
